--- a/Cygni/Cygni/Cygni.csproj
+++ b/Cygni/Cygni/Cygni.csproj
@@ -94,14 +94,15 @@
     <Compile Include="AST\Scopes\IScope.cs" />
     <Compile Include="AST\IAssignable.cs" />
     <Compile Include="AST\Scopes\ArrayScope.cs" />
-    <Compile Include="AST\ISymbolLookUp.cs" />
     <Compile Include="AST\Scopes\EnvTable.cs" />
-    <Compile Include="AST\ASTVisitor.cs" />
     <Compile Include="DataTypes\StructureItem.cs" />
+    <Compile Include="AST\Visitors\ASTVisitor.cs" />
+    <Compile Include="AST\Visitors\LookUpVisitor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Lexical\" />
     <Folder Include="AST\Scopes\" />
+    <Folder Include="AST\Visitors\" />
   </ItemGroup>
 </Project>
