--- a/Cygni.Mono/Cygni/Cygni.csproj
+++ b/Cygni.Mono/Cygni/Cygni.csproj
@@ -8,8 +8,6 @@
     <RootNamespace>Cygni</RootNamespace>
     <AssemblyName>Cygni</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -101,6 +99,7 @@
     <Compile Include="AST\Visitors\LookUpVisitor.cs" />
     <Compile Include="AST\ForEachEx.cs" />
     <Compile Include="AST\Scopes\BuiltInScope.cs" />
+    <Compile Include="AST\HashTableInitEx.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
