--- a/Cygni.Mono/Cygni/Cygni.csproj
+++ b/Cygni.Mono/Cygni/Cygni.csproj
@@ -81,7 +81,6 @@
     <Compile Include="Extensions\Extension.cs" />
     <Compile Include="Libraries\BasicLib.cs" />
     <Compile Include="Libraries\Commands.cs" />
-    <Compile Include="Libraries\HashTableLib.cs" />
     <Compile Include="Libraries\ListLib.cs" />
     <Compile Include="Libraries\MathLib.cs" />
     <Compile Include="Libraries\StrLib.cs" />
@@ -102,6 +101,7 @@
     <Compile Include="AST\DictionaryInitEx.cs" />
     <Compile Include="AST\AssignEx.cs" />
     <Compile Include="AST\SingleIndexEx.cs" />
+    <Compile Include="Libraries\DictionaryLib.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
