--- a/Cygni.Mono/Cygni/Cygni.csproj
+++ b/Cygni.Mono/Cygni/Cygni.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Executors\CompilerExecutor.cs" />
     <Compile Include="AST\GlobalEx.cs" />
     <Compile Include="AST\Scopes\ScopeType.cs" />
+    <Compile Include="DataTypes\Command.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
