--- a/Cygni.Mono/Cygni/Cygni.csproj
+++ b/Cygni.Mono/Cygni/Cygni.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Libraries\IOLibrary.cs" />
     <Compile Include="AST\Visitors\RangeEx.cs" />
     <Compile Include="DataTypes\Range.cs" />
+    <Compile Include="DataTypes\Interfaces\ICountable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
