--- a/Cygni.Mono/Cygni/Cygni.csproj
+++ b/Cygni.Mono/Cygni/Cygni.csproj
@@ -8,6 +8,8 @@
     <RootNamespace>Cygni</RootNamespace>
     <AssemblyName>Cygni</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -69,11 +71,6 @@
     <Compile Include="DataTypes\Function.cs" />
     <Compile Include="DataTypes\NativeFunction.cs" />
     <Compile Include="DataTypes\Structure.cs" />
-    <Compile Include="Executors\CodeFileExecutor.cs" />
-    <Compile Include="Executors\CodeStringExecutor.cs" />
-    <Compile Include="Executors\Engine.cs" />
-    <Compile Include="Executors\Executor.cs" />
-    <Compile Include="Executors\InteractiveExecutor.cs" />
     <Compile Include="Extensions\Extension.cs" />
     <Compile Include="Libraries\BasicLib.cs" />
     <Compile Include="Libraries\Commands.cs" />
@@ -118,6 +115,11 @@
     <Compile Include="DataTypes\Interfaces\ICountable.cs" />
     <Compile Include="AST\ConditionEx.cs" />
     <Compile Include="AST\RangeEx.cs" />
+    <Compile Include="Engine.cs" />
+    <Compile Include="Loaders\CodeFileLoader.cs" />
+    <Compile Include="Loaders\CodeStringLoader.cs" />
+    <Compile Include="Loaders\Loader.cs" />
+    <Compile Include="Loaders\InteractiveLoader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
