--- a/Cygni.Mono/Cygni/Cygni.csproj
+++ b/Cygni.Mono/Cygni/Cygni.csproj
@@ -8,8 +8,6 @@
     <RootNamespace>Cygni</RootNamespace>
     <AssemblyName>Cygni</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -91,7 +89,6 @@
     <Compile Include="AST\Scopes\ScopeType.cs" />
     <Compile Include="DataTypes\Command.cs" />
     <Compile Include="AST\Scopes\ResizableArrayScope.cs" />
-    <Compile Include="AST\UnpackEx.cs" />
     <Compile Include="DataTypes\DynTuple.cs" />
     <Compile Include="Libraries\BuiltInLibrary.cs" />
     <Compile Include="AST\Interfaces\IAssignable.cs" />
@@ -101,7 +98,6 @@
     <Compile Include="DataTypes\Interfaces\IIndexable.cs" />
     <Compile Include="AST\Optimizers\Location.cs" />
     <Compile Include="AST\Optimizers\Symbols.cs" />
-    <Compile Include="AST\LocalEx.cs" />
     <Compile Include="DataTypes\Closure.cs" />
     <Compile Include="AST\DefClosureEx.cs" />
     <Compile Include="Libraries\FunctionalProgrammingLibrary.cs" />
@@ -120,6 +116,9 @@
     <Compile Include="Loaders\CodeStringLoader.cs" />
     <Compile Include="Loaders\Loader.cs" />
     <Compile Include="Loaders\InteractiveLoader.cs" />
+    <Compile Include="AST\DefVarEx.cs" />
+    <Compile Include="AST\LogicalEx.cs" />
+    <Compile Include="AST\Visitors\ASTStringBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
